# quectel-fc2x

./: about.html
BT/Android/libbt-vendor/: Android.mk
BT/Android/libbt-vendor/include/: bt_vendor_persist.h  bt_vendor_qcom.h  hci_smd.h  hci_uart.h  hw_ar3k.h  hw_rome.h
BT/Android/libbt-vendor/src/: bt_vendor_persist.cpp  bt_vendor_qcom.c  hardware.c  hci_smd.c  hci_uart.c  hw_ar3k.c  hw_rome.c
BT/Linux/: README.md
BT/Linux/patch/: 0001-hciattach-add-support-for-qualcomm-chip.patch
BT/Linux/tool/NvmUtility/: NvmUtility.py
BT/Linux/tool/qlbt/: Android.mk  Makefile  qlbt  qlbt.c
BT/Linux/tool/quec_bt_tool/: CHANGELOG.md  Makefile  README.md  bt_fw_version.txt  btconfig
WLAN_firmware/: BuildProducts.txt
WiFi/: about.html
WiFi/cnss_host_LEA/: BuildProducts.txt
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/: configure.ac
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/a2dp_sink/include/: A2dp_Sink.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/a2dp_sink/src/: A2dp_Sink.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/audio_manager/include/: Audio_Manager.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/audio_manager/src/: Audio_Manager.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/conf/: bt_app.conf
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/gap/include/: Gap.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/gap/src/: Gap.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/gatt/include/: Gatt.hpp  Rsp.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/gatt/src/: Gatt.cpp  Rsp.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/hfp_client/include/: HfpClient.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/hfp_client/src/: HfpClient.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/include/: ipc.h
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/main/: Makefile.am
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/main/include/: Main.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/main/src/: Main.cpp  ipc.c
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/osi/include/: log.h
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/pan/include/: Pan.hpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/pan/src/: Pan.cpp
cnss_host_LEA/chss_proc/host/AIO/apps/app/bt-app/utils/src/: utils.c
cnss_host_LEA/chss_proc/host/AIO/apps/app/property-ops/: Makefile.am
cnss_host_LEA/chss_proc/host/AIO/apps/app/property-ops/include/: property_ops.h
cnss_host_LEA/chss_proc/host/AIO/apps/app/property-ops/src/: ll.c
meta_build/load_meta/tools/: hostapd_cli  myftm  sigma_dut  wpa_cli
tools/QCA9379_QCA9377_QCA6174A_LA/BtDiag/: Btdiag.c  Makefile  connection.c
tools/QCA9379_QCA9377_QCA6174A_LA/btconfig/: btconfig.c
tools/QCA9379_QCA9377_QCA6174A_LA/wds/: Android.mk  wds_hci_pfal.h  wds_hci_pfal_linux.c  wds_main.c
tools/QCA9379_QCA9377_QCA6174A_LE/BtDiag/: Readme.txt  connection.h  hciattach_rome.c  hciattach_rome.h  privateMembers.c  run_UART_Btdiag.sh  run_USB_Btdiag.sh
tools/QCA9379_QCA9377_QCA6174A_LE/NanTool/: LICENSE  NOTICE
tools/QCA9379_QCA9377_QCA6174A_LE/btconfig/: btconfig.c  btconfig.h  configure.ac
tools/QCA9379_QCA9377_QCA6174A_LE/myftm/: NOTICE.txt
(+385 files in other folders)
